<resources>
    <string name="app_name">Mobile Apps CW2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_meeting">Create Meeting</string>
    <string name="title_activity_meeting_activity">Meeting Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="attendee_name">Name</string>
    <string name="enter_an_person_here">Enter a name here</string>
    <string name="save_attendee">Save</string>
    <string name="delete_attendee">Delete</string>
    <string name="create_meeting_title">Create Meeting</string>
    <string name="title_of_meeting">Title</string>
    <string name="notes_title">Notes</string>
    <string name="date_title">Date</string>
    <string name="time_title">Time</string>
    <string name="location_title">Location</string>
    <string name="latitude_hint">Latitude</string>
    <string name="longitude_hint">Longitude</string>
    <string name="select_location">Select</string>
    <string name="attendees_title">Attendees</string>
    <string name="enter_an_person_here_hint">Enter an person here</string>
    <string name="add_attendee_meeting">Add</string>
    <string name="notify">Notify</string>
    <string name="save_meeting">Save</string>
    <string name="delete_meeting">Delete</string>
    <string name="search_description">Search</string>
    <string name="enter_address_city_or_postal_code_hint">Enter Address, City or Postal Code</string>
    <string name="size_button">Size</string>
    <string name="colour_button">colour</string>
    <string name="history_title">History!</string>
    <string name="location_fragment">Location!</string>
    <string name="meeting_bottom_nav">Meeting</string>
    <string name="history_bottom_nav">History</string>
    <string name="location_bottom_nav">Location</string>
    <string name="colour_blue">Blue</string>
    <string name="colour_black">Black</string>
    <string name="size_25">25</string>
    <string name="size_15">15</string>
    <string name="new_attendees_toast">New attendees Insert</string>
    <string name="attendees_updated_toast">Attendees updated</string>
    <string name="Attendee_deleted_toast">Attendee Record Deleted</string>
    <string name="dummy_text">This is Dummy Text so you can see what changes you make to the edit
        text views through this application.

        When you click the size button, the size of this text
        changes.

        When you click the colour button, the colour of this text will change to a
        different colour.

        The changes you make here will be applied to the rest of the edit text
        areas in the application.</string>
    <string name="create">Create</string>
</resources>
