<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/sizebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_button"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="46dp"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:textColor="#FFFFFF"
        android:layout_below="@id/dummy_text"/>

    <Button
        android:id="@+id/colourbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/sizebtn"
        android:layout_toRightOf="@+id/sizebtn"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/colour_button"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="46dp"
        android:textColor="#FFFFFF"
        android:layout_below="@id/dummy_text"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:text="@string/dummy_text"
        android:id="@+id/dummy_text"/>
</RelativeLayout>